完成 DiffSinger 插件迁移

--- a/csharp/Plugins/Json2Diffsinger/Json2DiffSinger.csproj
+++ b/csharp/Plugins/Json2Diffsinger/Json2DiffSinger.csproj
@@ -1,100 +1,23 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BDBBCE8A-6E4A-41BC-840C-DEC3BB411FD4}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Json2DiffSinger</RootNamespace>
+    <TargetFramework>net7.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
     <AssemblyName>Json2DiffSinger</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Deterministic>true</Deterministic>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <PropertyGroup>
     <StartupObject>Json2DiffSinger.Console.Program</StartupObject>
   </PropertyGroup>
+  
   <ItemGroup>
-    <Reference Include="CommandLine, Version=2.9.1.0, Culture=neutral, PublicKeyToken=5a870481e358d379, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\CommandLineParser.2.9.1\lib\net461\CommandLine.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <ProjectReference Include="..\..\Model\OpenSvip.Model.csproj" />
+    <ProjectReference Include="..\..\Framework\OpenSvip.Framework.csproj" />
+    <ProjectReference Include="..\..\Library\OpenSvip.Library.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Console\Arguments.cs" />
-    <Compile Include="Core\Models\DsPitchParamCurve.cs" />
-    <Compile Include="Core\Models\LowLevel\AbstractParamsModel.cs" />
-    <Compile Include="Core\Models\DsParamNode.cs" />
-    <Compile Include="Core\Models\DsProject.cs" />
-    <Compile Include="DiffSingerConverter.cs" />
-    <Compile Include="DiffSingerEncoder.cs" />
-    <Compile Include="Core\Models\DsNote.cs" />
-    <Compile Include="Options\DictionaryOption.cs" />
-    <Compile Include="Options\PhonemeModeOption.cs" />
-    <Compile Include="Core\Models\LowLevel\PhonemeParamsModel.cs" />
-    <Compile Include="Options\PitchModeOption.cs" />
-    <Compile Include="Utils\AlgorithmUtils.cs" />
-    <Compile Include="Utils\CurveSegmentUtils.cs" />
-    <Compile Include="Utils\LyricUtil.cs" />
-    <Compile Include="Utils\NoteListUtils.cs" />
-    <Compile Include="Utils\NoteNameConvert.cs" />
-    <Compile Include="Console\Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\PitchParamUtils.cs" />
-    <Compile Include="Utils\ProjectUtil.cs" />
-    <Compile Include="Utils\PinyinUtil.cs" />
-    <Compile Include="Utils\ToneUtils.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Framework\OpenSvip.Framework.csproj">
-      <Project>{1a025cf4-6ce6-42f9-ad09-16e56d840d95}</Project>
-      <Name>OpenSvip.Framework</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Library\OpenSvip.Library.csproj">
-      <Project>{C0982090-A08E-45B8-953A-6D1750A69CDD}</Project>
-      <Name>OpenSvip.Library</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Model\OpenSvip.Model.csproj">
-      <Project>{f0cf4e57-33f4-4a63-a45f-69727058c24a}</Project>
-      <Name>OpenSvip.Model</Name>
-    </ProjectReference>
-  </ItemGroup>
+
   <ItemGroup>
     <Content Include="Dictionaries\opencpop-strict.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -106,5 +29,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
+  <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+  </ItemGroup>
 </Project>
