自动拷贝依赖

--- a/csharp/Plugins/Json2Diffsinger/Json2DiffSinger.csproj
+++ b/csharp/Plugins/Json2Diffsinger/Json2DiffSinger.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyName>Json2DiffSinger</AssemblyName>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <PropertyGroup>
