--- a/csharp/Plugins/Ustx/Plugin.Ustx.csproj
+++ b/csharp/Plugins/Ustx/Plugin.Ustx.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyName>OxygenDioxide.UstxPlugin</AssemblyName>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
