--- a/csharp/Plugins/SynthV/Plugin.SynthV.csproj
+++ b/csharp/Plugins/SynthV/Plugin.SynthV.csproj
@@ -1,113 +1,35 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-    <PropertyGroup>
-        <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-        <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{052F5EA1-52F4-46BE-AAC3-7CD031E3CDDE}</ProjectGuid>
-        <OutputType>Library</OutputType>
-        <AppDesignerFolder>Properties</AppDesignerFolder>
-        <RootNamespace>Plugin.SynthV</RootNamespace>
-        <AssemblyName>Plugin.SynthV</AssemblyName>
-        <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-        <FileAlignment>512</FileAlignment>
-        <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-        <PlatformTarget>AnyCPU</PlatformTarget>
-        <DebugSymbols>true</DebugSymbols>
-        <DebugType>full</DebugType>
-        <Optimize>false</Optimize>
-        <OutputPath>bin\Debug\</OutputPath>
-        <DefineConstants>DEBUG;TRACE</DefineConstants>
-        <ErrorReport>prompt</ErrorReport>
-        <WarningLevel>4</WarningLevel>
-    </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-        <PlatformTarget>AnyCPU</PlatformTarget>
-        <DebugType>none</DebugType>
-        <Optimize>true</Optimize>
-        <OutputPath>bin\Release\</OutputPath>
-        <DefineConstants>TRACE</DefineConstants>
-        <ErrorReport>prompt</ErrorReport>
-        <WarningLevel>4</WarningLevel>
-    </PropertyGroup>
-    <ItemGroup>
-        <Reference Include="NAudio, Version=1.10.0.0, Culture=neutral, processorArchitecture=MSIL">
-          <HintPath>..\..\packages\NAudio.1.10.0\lib\net35\NAudio.dll</HintPath>
-        </Reference>
-        <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
-          <HintPath>..\..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-          <Private>True</Private>
-        </Reference>
-        <Reference Include="NPinyinPro, Version=0.3.3.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\packages\NPinyinPro.0.3.3\lib\net20\NPinyinPro.dll</HintPath>
-        </Reference>
-        <Reference Include="System" />
-        <Reference Include="System.Core" />
-        <Reference Include="System.Windows.Forms" />
-    </ItemGroup>
-    <ItemGroup>
-        <Compile Include="BreathOptions.cs" />
-        <Compile Include="CurveGenerator.cs" />
-        <Compile Include="GroupOptions.cs" />
-        <Compile Include="Interpolation.cs" />
-        <Compile Include="LambertW.cs" />
-        <Compile Include="ParamExpression.cs" />
-        <Compile Include="CompoundParam.cs" />
-        <Compile Include="PitchGenerator.cs" />
-        <Compile Include="RangeUtils.cs" />
-        <Compile Include="TrackMergeUtils.cs" />
-        <Compile Include="PhonemeUtils.cs" />
-        <Compile Include="PitchOptions.cs" />
-        <Compile Include="PitchSimulator.cs" />
-        <Compile Include="PitchSlide.cs" />
-        <Compile Include="SynthVConverter.cs" />
-        <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="SynthVDecoder.cs" />
-        <Compile Include="SynthVEncoder.cs" />
-        <Compile Include="SynthVSerialization.cs" />
-        <Compile Include="SynthVModel.cs" />
-        <Compile Include="Test.cs" Condition=" '$(Configuration)' == 'Debug' " />
-        <Compile Include="ScaledParam.cs" />
-        <Compile Include="TranslationalParam.cs" />
-        <Compile Include="VibratoOptions.cs" />
-    </ItemGroup>
-    <ItemGroup>
-      <ProjectReference Include="..\..\Framework\OpenSvip.Framework.csproj">
-        <Project>{1a025cf4-6ce6-42f9-ad09-16e56d840d95}</Project>
-        <Name>OpenSvip.Framework</Name>
-      </ProjectReference>
-      <ProjectReference Include="..\..\Library\OpenSvip.Library.csproj">
-        <Project>{c0982090-a08e-45b8-953a-6d1750a69cdd}</Project>
-        <Name>OpenSvip.Library</Name>
-      </ProjectReference>
-      <ProjectReference Include="..\..\Model\OpenSvip.Model.csproj">
-        <Project>{f0cf4e57-33f4-4a63-a45f-69727058c24a}</Project>
-        <Name>OpenSvip.Model</Name>
-      </ProjectReference>
-    </ItemGroup>
-    <ItemGroup>
-      <Content Include="PhonemeDict.json">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </Content>
-      <Content Include="Properties.xml">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </Content>
-      <Content Include="XsampaDict.json">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </Content>
-    </ItemGroup>
-    <ItemGroup>
-      <None Include="packages.config" />
-    </ItemGroup>
-    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-    <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-         Other similar extension points exist, see Microsoft.Common.targets.
-    <Target Name="BeforeBuild">
-    </Target>
-    <Target Name="AfterBuild">
-    </Target>
-    -->
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <OutputType>Library</OutputType>
+    <TargetFramework>net7.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <AssemblyName>Plugin.SynthV</AssemblyName>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Framework\OpenSvip.Framework.csproj" />
+    <ProjectReference Include="..\..\Library\OpenSvip.Library.csproj" />
+    <ProjectReference Include="..\..\Model\OpenSvip.Model.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="PhonemeDict.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Properties.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="XsampaDict.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="NAudio" Version="2.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="NPinyinPro" Version="0.3.3" />
+  </ItemGroup>
 </Project>
