[diffsinger] 修复词典读取的问题

--- a/csharp/Plugins/Json2Diffsinger/Json2DiffSinger.csproj
+++ b/csharp/Plugins/Json2Diffsinger/Json2DiffSinger.csproj
@@ -96,7 +96,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Dictionaries\opencpop-extension.txt" />
+    <Content Include="Dictionaries\opencpop-extension.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Dictionaries\opencpop-strict.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
