[ace] 支持读取新版工程（未完成）

--- a/csharp/Plugins/Ace/Plugin.Ace.csproj
+++ b/csharp/Plugins/Ace/Plugin.Ace.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Test.cs" Condition=" '$(Configuration)' == 'Debug' " />
     <Compile Include="TimeUtils.cs" />
     <Compile Include="TracksJsonConverter.cs" />
+    <Compile Include="ZstdJsonConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties.xml">
